
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


typedef scalar_t__ TaskPlacementExecutionState ;
struct TYPE_4__ {scalar_t__ executionState; } ;
typedef TYPE_1__ TaskPlacementExecution ;
typedef scalar_t__ TaskExecutionState ;
struct TYPE_5__ {scalar_t__ executionOrder; int placementExecutionCount; scalar_t__ executionState; TYPE_1__** placementExecutions; } ;
typedef TYPE_2__ ShardCommandExecution ;
typedef scalar_t__ PlacementExecutionOrder ;


 scalar_t__ EXECUTION_ORDER_ANY ;
 scalar_t__ PLACEMENT_EXECUTION_FAILED ;
 scalar_t__ PLACEMENT_EXECUTION_FINISHED ;
 scalar_t__ TASK_EXECUTION_FAILED ;
 scalar_t__ TASK_EXECUTION_FINISHED ;
 scalar_t__ TASK_EXECUTION_NOT_FINISHED ;

__attribute__((used)) static TaskExecutionState
TaskExecutionStateMachine(ShardCommandExecution *shardCommandExecution)
{
 PlacementExecutionOrder executionOrder = shardCommandExecution->executionOrder;
 int donePlacementCount = 0;
 int failedPlacementCount = 0;
 int placementCount = 0;
 int placementExecutionIndex = 0;
 int placementExecutionCount = shardCommandExecution->placementExecutionCount;
 TaskExecutionState currentTaskExecutionState = shardCommandExecution->executionState;

 if (currentTaskExecutionState != TASK_EXECUTION_NOT_FINISHED)
 {

  return currentTaskExecutionState;
 }

 for (; placementExecutionIndex < placementExecutionCount; placementExecutionIndex++)
 {
  TaskPlacementExecution *placementExecution =
   shardCommandExecution->placementExecutions[placementExecutionIndex];
  TaskPlacementExecutionState executionState = placementExecution->executionState;

  if (executionState == PLACEMENT_EXECUTION_FINISHED)
  {
   donePlacementCount++;
  }
  else if (executionState == PLACEMENT_EXECUTION_FAILED)
  {
   failedPlacementCount++;
  }

  placementCount++;
 }

 if (failedPlacementCount == placementCount)
 {
  currentTaskExecutionState = TASK_EXECUTION_FAILED;
 }
 else if (executionOrder == EXECUTION_ORDER_ANY && donePlacementCount > 0)
 {
  currentTaskExecutionState = TASK_EXECUTION_FINISHED;
 }
 else if (donePlacementCount + failedPlacementCount == placementCount)
 {
  currentTaskExecutionState = TASK_EXECUTION_FINISHED;
 }
 else
 {
  currentTaskExecutionState = TASK_EXECUTION_NOT_FINISHED;
 }

 shardCommandExecution->executionState = currentTaskExecutionState;

 return shardCommandExecution->executionState;
}
